Fixing login form overflow on mobile

--- a/portfolio/src/styles/components/_login.scss
+++ b/portfolio/src/styles/components/_login.scss
@@ -22,17 +22,35 @@
 
   &__row {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @include breakpoint(small) {
+      flex-direction: row;
+      align-items: unset;
+    }
   }
 
   &__input {
     border: 2px solid var(--primary-color);
-    border-radius: 10px 0 0 10px;
+    border-radius: 10px;
     padding: 0 20px;
+    min-height: 30px;
+
+    @include breakpoint(small) {
+      border-radius: 10px 0 0 10px;
+    }
   }
 
   &__button {
     .button {
-      border-radius: 0 10px 10px 0;
+      border-radius: 10px;
+      margin-top: 20px;
+
+      @include breakpoint(small) {
+        margin-top: 0;
+        border-radius: 0 10px 10px 0;
+      }
     }
   }
 }
